--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link href="/src/assets/imgs/rps-game/game.png" rel="icon" type="image/svg+xml" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-    <title>Rock,Paper,Scissors</title>
+    <title>Simple Games</title>
   </head>
   <body>
     <div id="root"></div>
